# pico-racer

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  MIGRATION_NOTES.md  README.md  build.sh  clippy.toml
.cargo/: config.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post-attach.sh  post-create.sh
crates/asset-build-tool/: Cargo.toml
crates/asset-build-tool/src/: error.rs  identifier.rs  lib.rs  main.rs  mesh_patcher.rs  obj_converter.rs  output_gen.rs  png_converter.rs  types.rs
crates/pico-racer-core/: Cargo.toml  build.rs
crates/pico-racer-core/assets/textures/: checker.png.placeholder
crates/pico-racer-core/src/: lib.rs
crates/pico-racer-core/src/assets/: mod.rs  teapot.rs  textures.rs
crates/pico-racer-core/src/camera/: mod.rs
crates/pico-racer-core/src/game/: mod.rs
crates/pico-racer-core/src/gpu/: driver.rs  mod.rs  registers.rs  vertex.rs
crates/pico-racer-core/src/math/: fixed.rs
crates/pico-racer-core/src/render/: commands.rs  lighting.rs  mesh.rs  mod.rs  transform.rs
crates/pico-racer-core/src/scene/: demos.rs  mod.rs
crates/pico-racer-core/src/track/: mod.rs  spline.rs
crates/pico-racer-core/src/vehicle/: chassis.rs  controls.rs  mod.rs  spec.rs  suspension.rs  visual.rs
crates/pico-racer-core/tests/: driver_tests.rs  lighting_tests.rs  packing_tests.rs  transform_tests.rs
crates/pico-racer-hal/: Cargo.toml
crates/pico-racer-hal/src/: lib.rs
crates/pico-racer-pc/: Cargo.toml
crates/pico-racer-pc/src/: input.rs  main.rs  transport.rs
crates/pico-racer-rp2350/: Cargo.toml  build.rs  memory.x
crates/pico-racer-rp2350/src/: core1.rs  input.rs  main.rs  queue.rs  transport.rs
doc/: README.md
doc/design/: README.md  unit_000_template.md
doc/interfaces/: README.md  int_000_template.md
doc/plans/: 01-demo-track-and-vehicle.md  02-track-mesh-generator.md  03-vehicle-tuning-pass.md  04-firmware-dep-drift-fix.md  README.md
doc/requirements/: README.md  req_000_template.md
doc/verification/: README.md  ver_000_template.md
