[package]
name = "asset-prep"
version.workspace = true
edition.workspace = true
authors = ["pico-racer team"]
description = "Asset preparation tool for RP2350 firmware - converts PNG/OBJ to GPU-compatible formats"

[lib]
name = "asset_build_tool"
path = "src/lib.rs"

[[bin]]
name = "asset-prep"
path = "src/main.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
tobj = "4.0"
thiserror = "1.0"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.8"
