[package]
name = "pico-racer-core"
version.workspace = true
edition.workspace = true
description = "Platform-agnostic GPU driver, rendering, and scene management for pico-racer"

[dependencies]
gpu-registers = { path = "../../external/pico-gs/registers" }
pico-racer-hal = { path = "../pico-racer-hal" }
glam = { version = "0.30", default-features = false, features = ["libm"] }
fixed = "1.30.0"
libm = "0.2"
heapless = "0.9.2"

[build-dependencies]
asset-prep = { path = "../asset-build-tool" }
