[package]
name = "pico-racer-rp2350"
version.workspace = true
edition.workspace = true
description = "RP2350 embedded host application for pico-racer SPI GPU"

[dependencies]
# Platform-agnostic crates
pico-racer-hal = { path = "../pico-racer-hal" }
pico-racer-core = { path = "../pico-racer-core" }

# RP2350 HAL
rp235x-hal = { version = "0.3.0", features = [
    "binary-info",
    "critical-section-impl",
    "rt",
    "defmt",
] }

# Cortex-M runtime
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

# Embedded HAL traits
embedded-hal = "1.0.0"

# Lock-free queue for inter-core communication
heapless = "0.9.2"

# Matrix/vector math (no_std with software trig)
glam = { version = "0.30", default-features = false, features = ["libm"] }

# Software math for no_std (sin, cos, sqrt)
libm = "0.2"

# Logging
defmt = "1.0.1"
defmt-rtt = "1.1.0"

# Panic handler
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Timing
fugit = "0.3.7"

[features]
default = []
usb-host = []
